--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database: Dwarf Novae</title>
+  <title>ARAS Spectral Database: Novae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,10 +67,11 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
+
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 1
-</p><p class="card-text">Number of spectra: 1
-</p><p class="card-text">Last update: 2021-09-08, 17:29</p>
+</p><p class="card-text">Number of spectra: 3
+</p><p class="card-text">Last update: 2021-09-23, 14:46</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -82,7 +83,8 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Outbursts and Monitoring</h5>
+        <h5 class="card-title">Stars of special interest</h5>
+<p class="card-text" style="margin-bottom:2.358cm;">Novae in outburst: CN Cha (SyN)</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
@@ -104,8 +106,6 @@
       <th>Name</th>
       <th>RA (2000)</th>
       <th>DEC (2000)</th>
-      <th>GCVS</th>
-      <th>Discovery Name</th>
       <th>No. of spectra</th>
       <th>First spectrum</th>
       <th>Last spectrum</th>
@@ -117,14 +117,11 @@
       <td><a href="sscyg.html">SS Cyg</a></td>
       <td>21 42 42.80</td>
       <td>+43 35 09.86</td>
-      <td>SS Cyg</td>
-      <td></td>
-      <td>27</td>
-      <td>2020-12-08</td>
-      <td>2021-08-01</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-08-01 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>3</td>
+      <td>2016-11-08</td>
+      <td>2016-11-08</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2016-11-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
-   
   </tbody>
 </table><br><br>
       </div>
