--- a/sscyg.html
+++ b/sscyg.html
@@ -68,9 +68,8 @@
       <h5 class="card-title">SS Cyg</h5>
       <p class="card-text">RA (2000): 21 42 42.80	</p>
   <p class="card-text">DEC (2000): +43 35 09.86</p>
-  <p class="card-text">V (mag):8 - 12/p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/v399-pav/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=V417+CMa&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
+  <p class="card-text">V (mag):8 - 12</p>
+      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=SS+Cyg&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
 </div><div class="col-sm-6">
