--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -84,7 +84,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text" style="margin-bottom:2.358cm;">Novae in outburst: CN Cha (SyN)</p>
+<p class="card-text" style="margin-bottom:2.358cm;">Dwarf Novae in outburst: -</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
