--- a/sscyg.html
+++ b/sscyg.html
@@ -86,7 +86,7 @@
   </div>
 
 </div>
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/sscyg.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="/archives/sscyg.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
