--- a/cmaql.html
+++ b/cmaql.html
@@ -90,13 +90,7 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-danger mb-3">
-<div class="card-body">
-<h5 class="card-title">Current outburst</h5></div>
-</div>
-<br>
-
-<a href="archives/cmaql.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.2 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/cmaql.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.2 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
