--- a/sscyg.html
+++ b/sscyg.html
@@ -89,13 +89,7 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
-<div class="card-body">
-<h5 class="card-title">Recurrent nova outburst 09-08-2021</h5></div>
-</div>
-<br>
-
-<a href="archives/sscyg.zip" class="btn btn-secondary">Download all spectra as *.zip file (43.4 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/sscyg.zip" class="btn btn-secondary">Download all spectra as *.zip file (43.4 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
