--- a/sscyg.html
+++ b/sscyg.html
@@ -65,12 +65,11 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">SS Cygni</h5>
-      <p class="card-text">RA (2000):  21 42 42.80</p>
-  <p class="card-text">DEC (2000): +43 35 09.86</p>
-  <p class="card-text">V (mag): 8 - 12</p>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=SS+Cyg&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
-
+      <h5 class="card-title">U Gem</h5>
+      <p class="card-text">RA (2000):  07 55 05.23</p>
+  <p class="card-text">DEC (2000): +22 00 05.05</p>
+  <p class="card-text">V (mag): 9 - 15</p>
+      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=U+Gem&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
 </div>
