--- a/ugem.html
+++ b/ugem.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database: Novae</title>
+  <title>ARAS Spectral Database: Symbiotics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,6 @@
 
 <body>
 
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">ARAS Spectral Database</a>
@@ -56,92 +55,62 @@
     </div>
   </nav>
 
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">ARAS Dwarf Novae</h1>
-        <br>
-		<div class="row">
-
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-
- <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 2
-</p><p class="card-text">Number of spectra: 86
-</p><p class="card-text">Last update: 2021-09-24, 11:10</p>
-<br><br>
-<a href="observers.html" class="btn btn-secondary">Observers</a>
-        <a href="observatories.html" class="btn btn-secondary">Observatories</a>
-
-      </div>
-    </div>
+<!-- Page Content -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center">
+      <h1 class="mt-5">ARAS Dwarf Novae</h1>
+<br>
+  <div class="row">
+<div class="col-sm-6">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">U Gem</h5>
+      <p class="card-text">RA (2000): 07 55 05.23</p>
+  <p class="card-text">DEC (2000):  +22 00 05.05</p>
+  <p class="card-text">V (mag): 9-15/p>
+      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=U+Gem&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
-
-  <div class="col-sm-6">
+  </div>
+</div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text" style="margin-bottom:2.358cm;">dwarf_novae in outburst: </p>
-		<br><br>
-		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
-
-	  </div>
+        <p class="card-text">Number of spectra:   1</p>
+<p class="card-text">First spectrum:   2021-09-16</p>
+<p class="card-text">Last spectrum:   2021-09-16</p>
+<br><br>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
+      </div>
     </div>
   </div>
 
 </div>
-<br>
-<a href="https://ui.adsabs.harvard.edu/public-libraries/5OTOTwmjSzybSEuLO5kWFA" class="btn btn-secondary btn-lg btn-block active" role="button" aria-pressed="true">Publications using ARAS spectra</a>
-<br>
 
-<br>
-<!-- <h3>Dwarf Novae</h3> -->
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/ugem.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
-      <th>Name</th>
-      <th>RA (2000)</th>
-      <th>DEC (2000)</th>
-      <th>No. of spectra</th>
-      <th>First spectrum</th>
-      <th>Last spectrum</th>
-      <th>Days since last</th>
+      <th>Date</th>
+      <th>Time (UT)</th>
+      <th>JD</th>
+      <th>Observer</th>
+      <th>Site</th>
+      <th>Resolution</th>
+      <th><div style="display:none;">Resolution</div></th>
+      <th>&lambda;<sub>min</sub></th>
+      <th>&lambda;<sub>max</sub></th>
+      <th><div style="display:none;"Wavelength</div></th>
+      <th>File</th>
+      <th>Preview</th>
+      <th>Comments</th>
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <td><a href="sscyg.html">SS Cyg</a></td>
-      <td>21 42 42.80</td>
-      <td>+43 35 09.86</td>
-      <td>69</td>
-      <td>2015-08-03</td>
-      <td>2016-11-08</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2016-11-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
-    </tr>
-    <tr>
-      <td><a href="ugem.html">U Gem</a></td>
-      <td>07 55 05.23</td>
-      <td>+22 00 0.5.05</td>
-      <td>17</td>
-      <td>2015-02-15</td>
-      <td>2015-04-11</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-04-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
-    </tr>
-  </tbody>
-</table><br><br>
-      </div>
+</table></div>
     </div>
   </div>
-
-
-
-
-  <br><br><br>
-  <footer class="page-footer font-small blue">
+  <!-- Footer --><br><br><br>
+<footer class="page-footer font-small blue">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3 navbar-dark bg-dark" style="color:white">© 2021 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
@@ -149,6 +118,7 @@
   <!-- Copyright -->
 
 </footer>
+<!-- Footer -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.slim.min.js"></script>
@@ -158,11 +128,18 @@
 $(document).ready( function () {
     $('#table_id').DataTable({
     paging: false,
-    "order": [[1,'asc']]
+    "columnDefs": [ {
+       "targets": [ 6, 9 ],
+       "orderable": false
+    },
+    {
+      "targets":  [ 6, 9 ],
+      "className": "text-left",
+ }],
+    "order": [[2,'asc']]
 });
 } );
 </script>
-
 </body>
 
 </html>
