--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 2
-</p><p class="card-text">Number of spectra: 102
-</p><p class="card-text">Last update: 2021-09-24, 11:55</p>
+<p class="card-text">Number of stars: 3
+</p><p class="card-text">Number of spectra: 111
+</p><p class="card-text">Last update: 2021-09-24, 12:17</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -130,6 +130,15 @@
       <td>2015-02-15</td>
       <td>2015-04-11</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-04-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="ssaur.html">SS Aur</a></td>
+      <td>06 13 22.43</td>
+      <td>+47 44 25.34</td>
+      <td>9</td>
+      <td>2015-02-07</td>
+      <td>2015-02-24</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-02-24 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
