--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database: Novae</title>
+  <title>ARAS Spectral Database: Dwarf Novae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 3
-</p><p class="card-text">Number of spectra: 111
-</p><p class="card-text">Last update: 2021-09-24, 12:17</p>
+<p class="card-text">Number of stars: 4
+</p><p class="card-text">Number of spectra: 119
+</p><p class="card-text">Last update: 2021-09-24, 12:44</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -139,6 +139,15 @@
       <td>2015-02-07</td>
       <td>2015-02-24</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-02-24 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="v627peg.html">V627 Peg</a></td>
+      <td>21 38 06.62</td>
+      <td>+26 19 56.0</td>
+      <td>8</td>
+      <td>2021-07-15</td>
+      <td>2021-07-20</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
