--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 5
-</p><p class="card-text">Number of spectra: 120
-</p><p class="card-text">Last update: 2021-09-24, 13:20</p>
+<p class="card-text">Number of stars: 6
+</p><p class="card-text">Number of spectra: 122
+</p><p class="card-text">Last update: 2021-09-24, 13:34</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -157,6 +157,15 @@
       <td>2016-08-25</td>
       <td>2016-08-25</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2016-08-25 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="gkper.html">GK Per</a></td>
+      <td>03 31 12.01</td>
+      <td>+43 54 15.47</td>
+      <td>2</td>
+      <td>2015-04-12</td>
+      <td>2015-04-15</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-04-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
