--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 6
-</p><p class="card-text">Number of spectra: 122
-</p><p class="card-text">Last update: 2021-09-24, 13:34</p>
+<p class="card-text">Number of stars: 13
+</p><p class="card-text">Number of spectra: 127
+</p><p class="card-text">Last update: 2021-09-24, 15:09</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -166,6 +166,69 @@
       <td>2015-04-12</td>
       <td>2015-04-15</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-04-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="asassn-14cl.html">ASASSN-14cl</a></td>
+      <td>21 54 57.62</td>
+      <td>+26 41 16.0</td>
+      <td>2</td>
+      <td>2014-06-15</td>
+      <td>2014-06-16</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-06-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="asassn-14cv.html">ASASSN-14cv</a></td>
+      <td>17 43 48.57</td>
+      <td>+ 52 03 45.76</td>
+      <td>3</td>
+      <td>2014-06-22</td>
+      <td>2014-06-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-06-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td>ASASSN-14fc</td>
+      <td>20 16 23.52</td>
+      <td>+ 62 17 28.2</td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>ASASSN-14jv</td>
+      <td>18 53 28.81</td>
+      <td>+42 03 43.16</td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>ASASSN-15bp</td>
+      <td>12 12 40.42</td>
+      <td>+04 16 55.8</td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>ASASSN-15ni</td>
+      <td>18 39 58.06</td>
+      <td>+22 21 17.80</td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>ASASSN-19om</td>
+      <td>19 28 22.19</td>
+      <td>+55 32 1.2</td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
     </tr>
   </tbody>
 </table><br><br>
