--- a/asassn-14cl.html
+++ b/asassn-14cl.html
@@ -65,7 +65,7 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title"ASASSN-14cl</h5>
+      <h5 class="card-title">ASASSN-14cl</h5>
       <p class="card-text">RA (2000):  21 54 57.62</p>
   <p class="card-text">DEC (2000): +26 41 16.0</p>
   <p class="card-text">V (mag):  - </p>
