--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -70,8 +70,8 @@
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 13
-</p><p class="card-text">Number of spectra: 127
-</p><p class="card-text">Last update: 2021-09-24, 15:25</p>
+</p><p class="card-text">Number of spectra: 131
+</p><p class="card-text">Last update: 2021-09-24, 15:43</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -186,40 +186,40 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-06-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>ASASSN-14fc</td>
+      <td><a href="asassn-14fc.html">ASASSN-14fc</a></td>
       <td>20 16 23.52</td>
       <td>+ 62 17 28.2</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>1</td>
+      <td>2014-08-09</td>
+      <td>2014-08-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-08-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>ASASSN-14jv</td>
+      <td><a href="asassn-14jv.html">ASASSN-14jv</a></td>
       <td>18 53 28.81</td>
       <td>+42 03 43.16</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>1</td>
+      <td>2014-11-10</td>
+      <td>2014-11-10</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-11-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>ASASSN-15bp</td>
+      <td><a href="asassn-15bp.html">ASASSN-15bp</a></td>
       <td>12 12 40.42</td>
       <td>+04 16 55.8</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>1</td>
+      <td>2015-01-27</td>
+      <td>2015-01-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-01-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>ASASSN-15ni</td>
+      <td><a href="asassn-15ni.html">ASASSN-15ni</a></td>
       <td>18 39 58.06</td>
       <td>+22 21 17.80</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>1</td>
+      <td>2015-07-28</td>
+      <td>2015-07-28</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-07-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
       <td>ASASSN-19om</td>
