--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -70,8 +70,8 @@
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 13
-</p><p class="card-text">Number of spectra: 131
-</p><p class="card-text">Last update: 2021-09-24, 15:43</p>
+</p><p class="card-text">Number of spectra: 134
+</p><p class="card-text">Last update: 2021-09-24, 15:59</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -222,13 +222,13 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2015-07-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>ASASSN-19om</td>
+      <td><a href="asassn-19om.html">ASASSN-19om</a></td>
       <td>19 28 22.19</td>
       <td>+55 32 1.2</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>3</td>
+      <td>2019-06-07</td>
+      <td>2019-06-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2019-06-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
