--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 17
-</p><p class="card-text">Number of spectra: 218
-</p><p class="card-text">Last update: 2021-09-24, 16:21</p>
+<p class="card-text">Number of stars: 18
+</p><p class="card-text">Number of spectra: 223
+</p><p class="card-text">Last update: 2021-09-24, 16:27</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -265,6 +265,15 @@
       <td>2019-07-12</td>
       <td>2020-04-11</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-04-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="vsxj213806.5+261957.html">VSX J213806.5+261957</a></td>
+      <td>21 380 6.5</td>
+      <td>+26 19 57</td>
+      <td>5</td>
+      <td>2014-10-25</td>
+      <td>2014-11-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-11-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
