--- a/asassn-14cl.html
+++ b/asassn-14cl.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">ASASSN-14cl</h5>
       <p class="card-text">RA (2000):  21 54 57.62</p>
   <p class="card-text">DEC (2000): +26 41 16.0</p>
-  <p class="card-text">V (mag):  - </p>
+  <p class="card-text">V (mag): 10.5 - 18.7</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=ASASSN+-14cl&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
