--- a/asassn-14cv.html
+++ b/asassn-14cv.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">ASASSN-14cv</h5>
       <p class="card-text">RA (2000):  17 43 48.57</p>
   <p class="card-text">DEC (2000): + 52 03 45.76/p>
-  <p class="card-text">V (mag):  - </p>
+  <p class="card-text">V (mag): 11.2 - 19.6</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=ASASSN+-14cv&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
