--- a/vsxj213806.5+261957.html
+++ b/vsxj213806.5+261957.html
@@ -65,10 +65,10 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">VSX j213806.5+261957</h5>
+      <h5 class="card-title">VSX j213806.5+261957 = V627 Peg</h5>
       <p class="card-text">RA (2000): 21 380 6.5</p>
   <p class="card-text">DEC (2000): +26 19 57/p>
-  <p class="card-text">V (mag):  - </p>
+  <p class="card-text">V (mag): 8.7 - 16.3</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=VSX+J213806.5+261957&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
