--- a/asassn-14jv.html
+++ b/asassn-14jv.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">ASASSN-14jv</h5>
       <p class="card-text">RA (2000):  18 53 28.81</p>
   <p class="card-text">DEC (2000): +42 03 43.16</p>
-  <p class="card-text">V (mag):  - </p>
+  <p class="card-text">V (mag):  11.3 - 19.3</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=ASASSN+-14jv&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
