--- a/pnvj03093063+2638031.html
+++ b/pnvj03093063+2638031.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">PNV J03093063+2638031</h5>
       <p class="card-text">RA (2000):  03 09 29.75</p>
   <p class="card-text">DEC (2000): +26 38 04.35/p>
-  <p class="card-text">V (mag):  - </p>
+  <p class="card-text">V (mag): 11.0 - 18.9</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=PNV+J03093063+2638031&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
