--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 75
-</p><p class="card-text">Number of spectra: 6796
-</p><p class="card-text">Last update: 2021-09-30, 06:22</p>
+<p class="card-text">Number of stars: 76
+</p><p class="card-text">Number of spectra: 6798
+</p><p class="card-text">Last update: 2021-09-30, 17:03</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1029,6 +1029,18 @@
       <td>30</td>
       <td>3</td>
       <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="als1.html">ALS 1</a></td>
+      <td>05 31 15.06</td>
+      <td>+19 03 49.88</td>
+      <td>2</td>
+      <td>2020-07-20</td>
+      <td>2020-07-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
     </tr>
   </tbody>
 </table><br><br>
