--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 76
-</p><p class="card-text">Number of spectra: 6798
-</p><p class="card-text">Last update: 2021-09-30, 17:03</p>
+<p class="card-text">Number of stars: 82
+</p><p class="card-text">Number of spectra: 6813
+</p><p class="card-text">Last update: 2021-09-30, 17:25</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -698,7 +698,7 @@
       <td><a href="stha32.html">StHA 32</a></td>
       <td>04 37 45.63</td>
       <td>-01 19 11.90</td>
-      <td>9</td>
+      <td>11</td>
       <td>2018-03-02</td>
       <td>2021-02-07</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-02-07 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1038,6 +1038,78 @@
       <td>2020-07-20</td>
       <td>2020-07-26</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="als1.html">ALS 1</a></td>
+      <td>05 31 15.06</td>
+      <td>+19 03 49.88</td>
+      <td>2</td>
+      <td>2020-07-20</td>
+      <td>2020-07-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="as316.html">AS 316</a></td>
+      <td>18 42 32.80</td>
+      <td>-21 17 46.66</td>
+      <td>2</td>
+      <td>2020-07-23</td>
+      <td>2020-07-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="as327.html">AS 327</a></td>
+      <td>18 53 16.66</td>
+      <td>-24 22 58.80</td>
+      <td>3</td>
+      <td>2020-05-24</td>
+      <td>2020-07-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="as327.html">AS 327</a></td>
+      <td>18 53 16.66</td>
+      <td>-24 22 58.80</td>
+      <td>3</td>
+      <td>2020-05-24</td>
+      <td>2020-07-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="clsco.html">CL Sco</a></td>
+      <td>16 54 51.97</td>
+      <td>-30 37 18.26</td>
+      <td>1</td>
+      <td>2020-05-30</td>
+      <td>2020-05-30</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-30 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="hksco.html">HK Sco</a></td>
+      <td>16 54 41.03</td>
+      <td>-30 23 06.88</td>
+      <td>2</td>
+      <td>2020-05-27</td>
+      <td>2020-05-31</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1.0</td>
