--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 80
-</p><p class="card-text">Number of spectra: 6809
-</p><p class="card-text">Last update: 2021-10-01, 07:40</p>
+<p class="card-text">Number of stars: 81
+</p><p class="card-text">Number of spectra: 6811
+</p><p class="card-text">Last update: 2021-10-01, 08:12</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1086,6 +1086,18 @@
       <td>2020-05-27</td>
       <td>2020-05-31</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="nsv11776.html">NSV 11776</a></td>
+      <td>19 09 56</td>
+      <td>-02 47.7</td>
+      <td>2</td>
+      <td>2020-06-22</td>
+      <td>2020-07-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1.0</td>
