--- a/stha164.html
+++ b/stha164.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">StHA 164</h5>
       <p class="card-text">RA (2000): 19 28 41.64</p>
   <p class="card-text">DEC (2000):  -06 03 51.79</p>
-  <p class="card-text">V (mag): 13.5/p>
+  <p class="card-text">V (mag): 13.5</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/stha-164/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=StHA+164&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
