--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 86
-</p><p class="card-text">Number of spectra: 6827
-</p><p class="card-text">Last update: 2021-10-01, 10:26</p>
+<p class="card-text">Number of stars: 84
+</p><p class="card-text">Number of spectra: 6821
+</p><p class="card-text">Last update: 2021-10-01, 11:16</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1127,40 +1127,16 @@
       <td>1.0</td>
     </tr>
     <tr>
-      <td><a href="stha164.html">StHA 164</a></td>
-      <td>19 28 41.64</td>
-      <td>-06 03 51.79</td>
-      <td>3</td>
-      <td>2020-06-23</td>
-      <td>2020-07-26</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
-      <td>30</td>
-      <td>-</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
-      <td><a href="v1044cen.html">V1044 Cen</a></td>
-      <td>13 16 01.37</td>
-      <td>-37 00 10.77</td>
-      <td>3</td>
-      <td>2020-05-25</td>
-      <td>2020-05-31</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
-      <td>30</td>
-      <td>-</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
-      <td><a href="v455sco.html">V455 Sco</a></td>
-      <td>17 07 21.73</td>
-      <td>-34 05 14.43</td>
+      <td><a href="v4018sgr.html">V4018 Sgr</a></td>
+      <td>18 25 26.84</td>
+      <td>-28 35 57.49</td>
       <td>2</td>
-      <td>2020-05-25</td>
-      <td>2020-05-31</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2020-07-22</td>
+      <td>2020-07-25</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-25 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
-      <td>1.0</td>
+      <td>10.0</td>
     </tr>
   </tbody>
 </table><br><br>
