--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 86
-</p><p class="card-text">Number of spectra: 6830
-</p><p class="card-text">Last update: 2021-10-01, 12:28</p>
+<p class="card-text">Number of stars: 87
+</p><p class="card-text">Number of spectra: 6832
+</p><p class="card-text">Last update: 2021-10-01, 18:02</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1161,6 +1161,18 @@
       <td>30</td>
       <td>-</td>
       <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="v2506sgr.html">V2506 Sgr</a></td>
+      <td>18 11 01.68</td>
+      <td>-28 32 40.36</td>
+      <td>2</td>
+      <td>2020-05-24</td>
+      <td>2020-05-31</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>60</td>
+      <td>-</td>
+      <td>2.0</td>
     </tr>
   </tbody>
 </table><br><br>
