--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 87
-</p><p class="card-text">Number of spectra: 6832
-</p><p class="card-text">Last update: 2021-10-01, 18:02</p>
+<p class="card-text">Number of stars: 90
+</p><p class="card-text">Number of spectra: 6838
+</p><p class="card-text">Last update: 2021-10-01, 18:26</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1173,6 +1173,42 @@
       <td>60</td>
       <td>-</td>
       <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="v3804sgr.html">V3804 Sgr</a></td>
+      <td>18 21 28.78</td>
+      <td>-31 32 04.56</td>
+      <td>2</td>
+      <td>2020-07-23</td>
+      <td>2020-07-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="wray15-1470.html">WRAY 15-1470</a></td>
+      <td>16 23 21.64</td>
+      <td>-27 40 10.32</td>
+      <td>2</td>
+      <td>2020-05-25</td>
+      <td>2020-05-30</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-30 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="hen2-247.html">Hen 2-247</a></td>
+      <td>17 34 17.21</td>
+      <td>-19 09 22.80</td>
+      <td>2</td>
+      <td>2020-05-27</td>
+      <td>2020-05-31</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1.0</td>
     </tr>
   </tbody>
 </table><br><br>
