--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 18
-</p><p class="card-text">Number of spectra: 267
-</p><p class="card-text">Last update: 2021-10-01, 11:23</p>
+<p class="card-text">Number of stars: 21
+</p><p class="card-text">Number of spectra: 271
+</p><p class="card-text">Last update: 2021-10-02, 07:22</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -274,6 +274,33 @@
       <td>2014-10-25</td>
       <td>2014-11-02</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2014-11-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="suuma.html">SU UMa</a></td>
+      <td>08 12 28.26</td>
+      <td>+62 36 22.42</td>
+      <td>2</td>
+      <td>2020-01-04</td>
+      <td>2020-01-10</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-01-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="vyscl.html">VY Scl</a></td>
+      <td>23 29 00.47</td>
+      <td>-29 46 45.98</td>
+      <td>1</td>
+      <td>2021-10-01</td>
+      <td>2021-10-01</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-10-01 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="1rxsj022917.1-395851.html">1RXS J022917.1-395851</a></td>
+      <td>02 29 16.94</td>
+      <td>-39 59 01.64</td>
+      <td>1</td>
+      <td>2021-10-01</td>
+      <td>2021-10-01</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-10-01 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
