--- a/arpav.html
+++ b/arpav.html
@@ -69,11 +69,12 @@
       <p class="card-text">RA (2000): 18 15 23.88</p>
   <p class="card-text">DEC (2000):  -66 04 42.93</p>
   <p class="card-text">V (mag): 7.4</p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/v399-pav/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
+  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/ar-pav/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=AR+Pav&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
@@ -88,9 +89,11 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-danger mb-3">
 <div class="card-body">
-<h5 class="card-title">Symbiotic outburst (08-2021)</h5></div>
+<h5 class="card-title">Current outburst</h5>
+<p class="card-text"><p class="card-text">Symbiotic outburst (08-2021)</p>
+</div>
 </div>
 <br>
 
