--- a/as316.html
+++ b/as316.html
@@ -68,12 +68,13 @@
       <h5 class="card-title">AS 316</h5>
       <p class="card-text">RA (2000): 18 42 32.80</p>
   <p class="card-text">DEC (2000):  -21 17 46.66</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/AS+316/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=as-316&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
