--- a/pnvj06000985+1426152.html
+++ b/pnvj06000985+1426152.html
@@ -67,12 +67,13 @@
     <div class="card-body">
       <h5 class="card-title">PNV J06000985+1426152</h5>
       <p class="card-text">RA (2000):  06 00 09.85</p>
-  <p class="card-text">DEC (2000): +14 26 15.2/p>
-  <p class="card-text">V (mag): 12.7 - 20.4B</p>
+  <p class="card-text">DEC (2000): +14 26 15.</p>
+  <p class="card-text">V (mag): 12.7 - 20.4</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=PNV+J06000985+14261521&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
