--- a/pnvj17592412+2520317.html
+++ b/pnvj17592412+2520317.html
@@ -65,14 +65,15 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">PNV J06000985+1426152</h5>
+      <h5 class="card-title">PNV J17592412+2520317</h5>
       <p class="card-text">RA (2000):  17 59 24.12</p>
-  <p class="card-text">DEC (2000): +25 20 31.7/p>
-  <p class="card-text">V (mag): 12.7 - 20.4B</p>
+  <p class="card-text">DEC (2000): +25 20 31.7</p>
+  <p class="card-text">V (mag): -</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=PNV+J17592412+2520317&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
