--- a/suuma.html
+++ b/suuma.html
@@ -65,15 +65,15 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">SU Uma</h5>
+      <h5 class="card-title">SU UMa</h5>
       <p class="card-text">RA (2000): 08 12 28.26</p>
   <p class="card-text">DEC (2000):  +62 36 22.42</p>
-  <p class="card-text">V (mag): --/p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/su-uma/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
+  <p class="card-text">V (mag): --</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=SU+Uma&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
