--- a/hksco.html
+++ b/hksco.html
@@ -68,12 +68,13 @@
       <h5 class="card-title">HK Sco</h5>
       <p class="card-text">RA (2000): 16 54 41.03</p>
   <p class="card-text">DEC (2000):  -30 23 06.88</p>
-  <p class="card-text">V (mag): 13.5/p>
+  <p class="card-text">V (mag): 13.5</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/HK+Sco/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=hk-sco&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
