--- a/nsv11776.html
+++ b/nsv11776.html
@@ -66,14 +66,15 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">NSV 11776</h5>
-      <p class="card-text">RA (2000): 19 09 56</p>
-  <p class="card-text">DEC (2000):  -02 47.7</p>
-  <p class="card-text">V (mag): 13.49/p>
+      <p class="card-text">RA (2000): 19 09 56.0</p>
+  <p class="card-text">DEC (2000):  -02 47 42.7</p>
+  <p class="card-text">V (mag): 13.49</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/nsv-11776/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=NSV+11776&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
