--- a/rsoph.html
+++ b/rsoph.html
@@ -90,9 +90,11 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-danger mb-3">
 <div class="card-body">
-<h5 class="card-title">Recurrent nova outburst 09-08-2021</h5></div>
+<h5 class="card-title">Current outburst</h5>
+<p class="card-text"><p class="card-text">Recurrent nova outburst 09-08-2021</p>
+</div>
 </div>
 <br>
 
