--- a/v455sco.html
+++ b/v455sco.html
@@ -68,12 +68,13 @@
       <h5 class="card-title">V455 Sco</h5>
       <p class="card-text">RA (2000): 17 07 21.73</p>
   <p class="card-text">DEC (2000):  -34 05 14.43</p>
-  <p class="card-text">V (mag): 14.0/p>
+  <p class="card-text">V (mag): 14.0</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/v455-sco/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=V455+Sco&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
