--- a/vyscl.html
+++ b/vyscl.html
@@ -68,12 +68,12 @@
       <h5 class="card-title">VY Scl</h5>
       <p class="card-text">RA (2000): 23 29 00.47</p>
   <p class="card-text">DEC (2000):  -29 46 45.98</p>
-  <p class="card-text">V (mag): --/p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/vy-scl/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=VY+Scl&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
+  <p class="card-text">V (mag): --</p>
+    <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=VY+Scl&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
