--- a/wray15-1470.html
+++ b/wray15-1470.html
@@ -68,12 +68,13 @@
       <h5 class="card-title">WRAY 15-1470</h5>
       <p class="card-text">RA (2000): 16 23 21.64</p>
   <p class="card-text">DEC (2000):  -27 40 10.32</p>
-  <p class="card-text">V (mag): 13.43/p>
+  <p class="card-text">V (mag): 13.43</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/wray-15-1470/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=WRAY+15-1470&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
-</div><div class="col-sm-6">
+</div>
+<div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
