--- a/irgem.html
+++ b/irgem.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">IR Gem</h5>
       <p class="card-text">RA (2000): 06 47 34.68</p>
   <p class="card-text">DEC (2000):  +28 06 22.33</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/ir-gem/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=IR+Gem&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
