--- a/rxand.html
+++ b/rxand.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">RX And</h5>
       <p class="card-text">RA (2000): 01 04 35.53</p>
   <p class="card-text">DEC (2000):  +41 17 57.78</p>
-  <p class="card-text">V (mag): 13.429/p>
+  <p class="card-text">V (mag): 13.429</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/rx-and/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=RX+And&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
