--- a/tzper.html
+++ b/tzper.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">TZ Per</h5>
       <p class="card-text">RA (2000): 02 13 50.96</p>
   <p class="card-text">DEC (2000):  +58 22 52.30</p>
-  <p class="card-text">V (mag): 12.0/p>
+  <p class="card-text">V (mag): 12.0</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/tz-per/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=TZ+Per&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
