--- a/xleo.html
+++ b/xleo.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">X Leo</h5>
       <p class="card-text">RA (2000): 09 51 01.46</p>
   <p class="card-text">DEC (2000):  +11 52 31.24</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/x-leo/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=X+Leo&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
