--- a/atcnc.html
+++ b/atcnc.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">AT Cnc</h5>
       <p class="card-text">RA (2000): 08 28 36.92</p>
   <p class="card-text">DEC (2000):  +25 20 03.04</p>
-  <p class="card-text">V (mag): 14.583/p>
+  <p class="card-text">V (mag): 14.583</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/at-cnc/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=AT+Cnc&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
