--- a/cnori.html
+++ b/cnori.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">CN Ori</h5>
       <p class="card-text">RA (2000): 05 52 07.78</p>
   <p class="card-text">DEC (2000):  -05 25 00.54</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/cn-ori/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=CN+Ori&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
