--- a/esdra.html
+++ b/esdra.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">ES Dra</h5>
       <p class="card-text">RA (2000): 15 25 31.81</p>
   <p class="card-text">DEC (2000):  +62 00 59.94</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/es-dra/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=ES+Dra&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
