--- a/foaqr.html
+++ b/foaqr.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">FO Aqr</h5>
       <p class="card-text">RA (2000): 22 17 55.37</p>
   <p class="card-text">DEC (2000):  -08 21 03.75</p>
-  <p class="card-text">V (mag): --/p>
+  <p class="card-text">V (mag): --</>p>
   <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/fo-aqr/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=FO+Aqr&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
