--- a/observers.html
+++ b/observers.html
@@ -271,7 +271,7 @@
       <td>FTE</td>
       <td>François Teyssier</td>
       <td>France</td>
-      <td>francoismathieu.teyssier [at] bbox.fr</td>
+      <td>francoismathieu.teyssier [at] gmail.com</td>
       <td><a href="http://www.astronomie-amateur.fr/">www.astronomie-amateur.fr</a></td>
     </tr>
     <tr>
