--- a/stha154.html
+++ b/stha154.html
@@ -88,7 +88,15 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/stha154.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<div class="card-body">
+<h5 class="card-title">no symbiotic activity in visible range</h5>
+<p class="card-text"><p class="card-text">low resolution spectra 1/10 days to detect variations (continuum, emission lines)</p>
+</div>
+</div>
+<br>
+
+<a href="archives/stha154.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
