--- a/symbiotics.html
+++ b/symbiotics.html
@@ -87,6 +87,9 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
+        
+<p class="card-text">Priority: pre-nova outburst of T CrB</p>
+<p class="card-text">Professional request: R Aqr - Support to CHANDRA obs</p>
 <p class="card-text">Current campaigns: AG Dra, CH Cyg, R Aqr</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
 <p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CN Cha</p>
