--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 62
-</p><p class="card-text">Number of spectra: 3932
-</p><p class="card-text">Last update: 2022-11-23, 08:46</p>
+<p class="card-text">Number of stars: 63
+</p><p class="card-text">Number of spectra: 3934
+</p><p class="card-text">Last update: 2022-11-23, 10:24</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -165,10 +165,10 @@
       <td>+61 11 14.8</td>
       <td>V1405 Cas</td>
       <td>PNV J23244760+6111140</td>
-      <td>507</td>
+      <td>508</td>
       <td>2021-03-19</td>
-      <td>2022-09-22</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-09-22 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2022-11-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-11-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
       <td><a href="novacen2013.html">Nova Cen 2013</a></td>
@@ -790,12 +790,23 @@
       <td><a href="novamen2022.html">Nova Men 2022</a></td>
       <td>06 29 08.41</td>
       <td>-71 29 38.89</td>
-      <td>-- Men</td>
+      <td></td>
       <td>AT 2022ufh</td>
       <td>11</td>
       <td>2022-10-01</td>
       <td>2022-11-13</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novaret2020.html">Nova Ret 2020</a></td>
+      <td>03 58 29.55</td>
+      <td>-54 46 41.23</td>
+      <td>YZ Ret</td>
+      <td>MGAB-V207</td>
+      <td>1</td>
+      <td>2022-11-22</td>
+      <td>2022-11-22</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-11-22 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
