--- a/symbiotics.html
+++ b/symbiotics.html
@@ -1019,9 +1019,9 @@
       <td>2</td>
     </tr>
     <tr>
-      <td><a href="als1.html">ALS 1</a></td>
-      <td>05 31 15.06</td>
-      <td>+19 03 49.88</td>
+      <td><a href="als1.html">[ALS88] 1</a></td>
+      <td>19 16 16.079</td>
+      <td>-08 17 45.89</td>
       <td>3</td>
       <td>2020-07-20</td>
       <td>2021-06-09</td>
